k8s/apps/nginx-hello-world/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-hello-world
  namespace: demo
  labels:
    app: nginx-hello-world
spec:
  selector:
    app: nginx-hello-world
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
